# rccl

./: CHANGELOG.md  CMakeLists.txt  README.md  install.sh  toolchain-linux.cmake
.azuredevops/: multinode-ci-slurm-nightly.yml  multinode-ci-slurm-pr.yml
.azuredevops/slurm/: build.sh  test_rccl-UnitTests.sh
.github/: CODEOWNERS
.github/workflows/: therock-ci-linux.yml  therock-test-packages-multi-node.yml  therock-test-packages-single-node.yml
cmake/: Dependencies.cmake  MSCCLPP.cmake
docs/how-to/: rccl-usage-tips.rst
ext-profiler/example/: Makefile
ext-tuner/example/: rccl_tuner_gfx950.conf
src/: allocator.cc  ce_coll.cc  collectives.cc  debug.cc  dev_runtime.cc  enqueue.cc  group.cc  init.cc  msccl.cc  nccl.h.in  proxy.cc  rccl_wrap.cc  sym_kernels.cc
src/device/: all_gather.h  all_reduce.h  alltoall_pivot.h  broadcast.h  common.h  common_kernel.h  generate.py  msccl_kernel_impl.h  op128.h  primitives.h  prims_ll.h  prims_ll128.h  prims_simple.h  reduce.h  reduce_scatter.h  sendrecv.h
src/device/symmetric/: all_gather.cuh  all_reduce.cuh
src/graph/: connect.cc  paths.cc  rome_models.cc  search.cc  topo.cc  topo.h  tuning.cc  xml.cc
src/include/: alloc.h  alt_rsmi.h  api_trace.h  channel.h  collectives.h  comm.h  device.h  enqueue.h  graph.h  nccl_common.h  net.h  proxy.h  rccl_common.h  rccl_vars.h  recorder.h
src/include/proxy_trace/: proxy_trace.h
src/misc/: alt_rsmi.cc  api_trace.cc  param.cc  recorder.cc  shmutils.cc  strongstream.cc
src/misc/msccl/: msccl_lifecycle.cc  msccl_setup.cc
src/plugin/: net.cc
src/register/: coll_reg.cc
src/transport/: coll_net.cc  net.cc  net_ib.cc  net_ib_rocm.cc  p2p.cc  shm.cc
test/: AllReduceTests.cpp  AllToAllTests.cpp  AllToAllVTests.cpp  AllocTests.cpp  AltRsmiTests.cpp  ArgCheckTests.cpp  CMakeLists.txt  EnqueueTests.cpp  GraphCaptureRegistrationTests.cpp  GroupCallTests.cpp  HipMockWrappers.cpp  HipMockWrappers.hpp  IbTest.cpp  IbTests.cpp  IpcsocketTests.cpp  MPITests.cpp  NetSocketTests.cpp  NonBlockingTests.cpp  P2pMockTests.cpp  P2pTests.cpp  ProxyTest.cpp  ProxyTests.cpp  README.md  RcclWrapTests.cpp  RegisterTests.cpp  SendRecvTests.cpp  ShmTests.cpp  StandaloneTests.cpp  TransportTests.cpp  UserBufferRegistrationTests.cpp  _RecorderTests.cpp  test_count.txt
test/common/: CallCollectiveForked.cpp  CollectiveArgs.cpp  CollectiveArgs.hpp  DeviceBufferHelpers.hpp  EnvVars.cpp  ErrCode.hpp  GenericScopeGuard.hpp  MPIEnvironment.cpp  MPIEnvironment.hpp  MPIHelpers.cpp  MPIHelpers.hpp  MPIStandaloneTest.hpp  MPITestBase.cpp  MPITestBase.hpp  MPITestCore.cpp  MPITestCore.hpp  MPITestRunner.md  PrepDataFuncs.cpp  ProcessIsolatedTestRunner.cpp  ProcessIsolatedTestRunner.hpp  ProcessIsolatedTestRunner.md  PtrUnion.cpp  PtrUnion.hpp  RCCLGenericScopeGuard.hpp  RCCLMPIEnvironment.cpp  RCCLMPIEnvironment.hpp  RCCLTestBufferHelpers.hpp  RCCLTestChecks.hpp  RCCLTestResourceGuards.hpp  RcclMockFuncs.hpp  ResourceGuards.hpp  StandaloneUtils.hpp  TestBed.cpp  TestBed.hpp  TestBedChild.cpp  TestChecks.hpp  main_mpi.cpp
test/device/: DeviceCommonTests.cpp  TestPrimsSimple.cpp
test/graph/: XmlTests.cpp
test/transport/: NetIbMPITests.cpp  NetMPITests.cpp  P2pMPITests.cpp  ShmMPITests.cpp  TransportMPIBase.cpp  TransportMPIBase.hpp
tools/RcclReplayer/: Makefile  rcclReplayer.hpp
tools/msccl-algorithms/: allgather_8n_direct_0_8k_ll.xml  allgather_8n_direct_0_8k_ll_op.xml  allgather_8n_direct_8k_1m_ll128.xml  allgather_8n_direct_8k_1m_ll128_op.xml
tools/scripts/: all_tests_config.txt  build_test_coverage.sh  replace_static.sh
tools/scripts/test_runner/: README.md  mi300x_mellanox_ib.json  rccl_perf_tests.json  test_config_sample.json  test_runner.py
tools/scripts/test_runner/lib/: __init__.py  test_config.py  test_executor.py  test_parser.py
tools/topo_expl/: Makefile  topo_expl.cpp
tools/topo_expl/include/: device_table.h
